extra options on Meek

--- a/Project1.Web/Web.config
+++ b/Project1.Web/Web.config
@@ -26,6 +26,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/missing"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -86,7 +89,7 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-  <meek altManageContentRoute="Missing">
+  <meek altManageContentRoute="missing" notFoundView="notFound">
     <repository type="FileSystem" source="App_Data/CMS" />
     <contentAdmin>
       <add role="Content Admin"/>
