--- a/Project1.Core/packages.config
+++ b/Project1.Core/packages.config
@@ -5,6 +5,7 @@
   <package id="Harden" version="1.1.10" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="LinqToXsd" version="2.0.2" />
+  <package id="MiniProfiler.Contrib.NHibernate" version="1.0.4289.24845" />
   <package id="Munq.IocContainer" version="3.1.4" />
   <package id="NhCodeFirst" version="1.1.46" />
   <package id="NHibernate" version="3.2.0.4000" />
