--- a/MiniProfilerContrib.NHibernate/MiniProfilerContrib.NHibernate.csproj
+++ b/MiniProfilerContrib.NHibernate/MiniProfilerContrib.NHibernate.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AF077B41-3BB7-41F5-B6F0-6A4F7437FFAB}</ProjectGuid>
+    <ProjectGuid>{58509520-B929-4F2C-807A-79D1440C7FCF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Project1.Core.Tests</RootNamespace>
-    <AssemblyName>Project1.Core.Tests</AssemblyName>
+    <RootNamespace>MiniProfilerContrib.NHibernate</RootNamespace>
+    <AssemblyName>MiniProfilerContrib.NHibernate</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,30 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Harden">
-      <HintPath>..\packages\Harden.1.1.10\lib\net40\Harden.dll</HintPath>
-    </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
-    <Reference Include="Munq.IocContainer">
-      <HintPath>..\packages\Munq.IocContainer.3.1.4\Lib\Munq.IocContainer.dll</HintPath>
+    <Reference Include="MiniProfiler">
+      <HintPath>..\packages\MiniProfiler.2.0.1\lib\net40\MiniProfiler.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.2.0.4000\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Noodles">
-      <HintPath>..\packages\Noodles.1.1.184\lib\net40\Noodles.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.6.0.12051, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="ObjectFac, Version=1.0.4386.21556, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ObjectFac.1.0.4386.21556\lib\net40\ObjectFac.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -65,20 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataTests\UserTests.cs" />
-    <Compile Include="DataTests\FixtureSetup.cs" />
-    <Compile Include="DataTests\SessionTestsBase.cs" />
+    <Compile Include="ProfiledSql2008ClientDriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Project1.Core\Project1.Core.csproj">
-      <Project>{8EA13459-574A-4D55-8800-9E08FCFBF696}</Project>
-      <Name>Project1.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
