--- a/Project1.Web/Web.config
+++ b/Project1.Web/Web.config
@@ -86,6 +86,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="MvcFlash.Core.Extensions" />
+        <add namespace="FormFactory" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
