--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\MiniProfilerContrib.NHibernate\packages.config" />
+  <repository path="..\Project1.Core.Tests\packages.config" />
   <repository path="..\Project1.Core\packages.config" />
   <repository path="..\Project1.Web\packages.config" />
 </repositories>
